<resources>
    <string name="app_name">Medical App</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_appointment">Appointment</string>
    <string name="menu_testBooking">Test Booking</string>
    <string name="home_second">Home Second</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_consultation">Consultations</string>
    <string name="menu_mydoctors">My Doctors</string>
    <string name="menu_medicalRecord">Medical Records</string>
    <string name="menu_reminder">Reminders</string>
    <string name="menu_payment">Payments/HealthCash</string>

    <string name="healthtip">Studies show that eating a proper breakfast is one of the most positive things you can do if you are trying to lose weight</string>
    <string name="healthtip2">Hot, spicy foods containing chillies or cayenne pepper trigger endorphins, the feel-good hormones. Endorphins have a powerful, almost narcotic, effect and make you feel good after exercising</string>
    <string name="health3">Blueberries, strawberries and raspberries contain plant nutrients known as anthocyanidins, which are powerful antioxidants.</string>
    <string name="health4">Tomato is a superstar in the fruit and veggie pantheon. Tomatoes contain lycopene, a powerful cancer fighter. They’re also rich in vitamin C.</string>

    <array name="diseasesList">
        <item>Select Diseases</item>
        <item>Fever</item>
        <item>Cholera</item>
        <item>Diphtheria</item>
        <item>Leprosy</item>
        <item>Pertussis</item>
        <item>Plague</item>
        <item>Scarlet fever</item>
        <item>Tetanus</item>
        <item>Tuberculosis</item>
        <item>Chickenpox</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
