<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.aaramidecal.ui.all_fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.aaramidecal.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.aaramidecal.ui.all_fragments.Upcoming_Appointment_Fragment"
        android:label="@string/menu_appointment"
        tools:layout="@layout/fragment_upcoming_appointment" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.aaramidecal.ui.testbooking.TestBookingFragment"
        android:label="@string/menu_testBooking"
        tools:layout="@layout/fragment_test_booking" />

    <fragment android:id="@+id/nav_appointment"
        android:name="com.example.aaramidecal.ui.appointments.AppointmentsFragment"
        android:label="@string/menu_appointment"
        tools:layout="@layout/fragment_appointments"/>

    <fragment android:id="@+id/nav_consultations"
        android:name="com.example.aaramidecal.ui.all_fragments.ConsultatWithDoctorFragment"
        android:label="@string/menu_consultation"
        tools:layout="@layout/fragment_consult_with_doctor"/>

    <fragment android:id="@+id/nav_medicalRecord"
        android:name="com.example.aaramidecal.ui.all_fragments.MedicalRecordFragment"
        android:label="@string/menu_medicalRecord"
        tools:layout="@layout/fragment_medical_record"/>

    <fragment android:id="@+id/nav_myDoctors"
        android:name="com.example.aaramidecal.ui.all_fragments.MyDoctorsFragment"
        android:label="@string/menu_mydoctors"
        tools:layout="@layout/fragment_my_doctors"/>

    <fragment android:id="@+id/nav_orders"
        android:name="com.example.aaramidecal.ui.all_fragments.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders"/>

    <fragment android:id="@+id/nav_payment"
        android:name="com.example.aaramidecal.ui.all_fragments.PaymentHealthFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment_health"/>

    <fragment android:id="@+id/nav_reminder"
        android:name="com.example.aaramidecal.ui.all_fragments.RemindersFragment"
        android:label="@string/menu_reminder"
        tools:layout="@layout/fragment_reminders"/>

</navigation>